# test-mkpoker

./: CMakeLists.txt  README.md
data/: river_results.db
example/: CMakeLists.txt  demo_besthand.cpp  demo_besthand_river.cpp  demo_equity.cpp  demo_handstrength.cpp  demo_simulation.cpp
